[package]
name = "speedtest-tui"
version = "0.1.0"
description = "A TUI to perform network Speed Tests"
authors = ["Alejo Lang <alejolang123@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = "0.12.22"
tokio = {version="1.46.1", features = ["full"]}
quick-xml = "0.38.0"
